Fixed scrollTop bug on view change, redesign of news

--- a/src/Sandbox/client/src/components/controllers/fm-market-controller/fm-market-view.html
+++ b/src/Sandbox/client/src/components/controllers/fm-market-controller/fm-market-view.html
@@ -1,17 +1,28 @@
 ﻿<fm-market-overview funds="fmMarket.funds"></fm-market-overview>
+
 <fm-bulletin-slider></fm-bulletin-slider>
 
-
 <section class="container-fluid section-padding background-dark">
-  <div class="col-sm-10 col-sm-offset-1">
-    <h2 class="text-center fm-news-title">Nyheter</h2>
-    <p class="text-center fm-news-subtitle">Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house dementors betrayal.</p>
 
-    <div class="row">
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1 margin-bottom-lg">
+      <h3 class="text-center">Nyheter</h3>
+      <p class="text-center">Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house dementors betrayal.</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
       <fm-newsfeed news="fmMarket.latestNews"></fm-newsfeed>
     </div>
-
   </div>
+
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
+      <a href="" ui-sref="news" class="fm-button">Visa alla</a>
+    </div>
+  </div>
+
 </section>
 
 
