--- a/src/Sandbox/client/src/components/directives/fm-hero-directive/fm-hero-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-hero-directive/fm-hero-style.scss
@@ -4,12 +4,16 @@
   background-position: 50% 50%;
   background-size: cover;
   background-attachment: fixed;
-  min-height: 100vh;
-  background-color: $color-accent; 
+  min-height: 65vh;
+  background-color: $color-accent;
   position: relative;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
 
-
-    &:before {
+  &:before {
     content: " ";
     height: 100%;
     width: 100%;
@@ -24,55 +28,14 @@
   }
 
   .fm-hero-content {
-    position: absolute;
-    top: 0; 
-    left: 0; 
-    bottom: 0; 
-    right: 0;
-    margin: auto;
-    max-width: 90%;
-    max-height: 50%;
-    text-align: center;
 
-    @media(min-width: $screen-sm) {
-      max-height: 45%;
-    }
-
-    &.animated{
+    &.animated {
       animation-duration: 1600ms;
     }
 
     .fm-hero-title {
-    color: $color-white;
-    margin: $layout-modifier-sm/2 auto $layout-modifier-sm auto;
-    margin: 0 auto;
-    font-size: $font-size-h1;
-    font-weight: $font-weight-semibold;
-    text-transform: uppercase;
-    word-break: break-word;
-    hyphens: auto;
-    display: block;
-
-      @media(min-width: $screen-sm) {
-        font-size: $font-size-h1 * 1.2;
-        margin: $layout-modifier-sm auto $layout-modifier-lg auto;
-        letter-spacing: 0.7rem;
-        border-bottom: 0.4rem solid $color-white;
-        display: inline-block;
-      }
-    }
-
-    .fm-hero-subtitle {
-      display: none;
-
-      @media(min-width: $screen-sm) {
-        color: $color-white;
-        font-weight: $font-weight-light;
-        text-transform: uppercase;
-        max-width: 100rem;
-        margin: 0 auto $layout-modifier-sm auto;
-        display: block;
-      }
+      color: $color-white;
+      letter-spacing: 0.5rem;
     }
   }
 }
