--- a/src/Sandbox/client/src/scss/base_imports/_buttons.scss
+++ b/src/Sandbox/client/src/scss/base_imports/_buttons.scss
@@ -11,7 +11,7 @@
   text-transform: uppercase;
   font-weight: $font-weight-semibold;
   letter-spacing: $font-letter-spacing;
-  font-size: $font-size-h6;
+  font-size: $font-size-caption;
   padding: 1rem $layout-modifier-sm;
   outline: 0;
   border: 0;
