--- a/src/Sandbox/wwwroot/views/fm-footer-view.html
+++ b/src/Sandbox/wwwroot/views/fm-footer-view.html
@@ -1,11 +1,10 @@
 <section class="fm-footer">
   <div class="container-fluid section-padding">
     <div class="row">
-
       <div class="col-xs-12 col-sm-10 col-sm-offset-1">
 
         <div class="fm-footer-list col-xs-12 col-md-6">
-          <p class="fm-footer-heading">Frågor och svar</p>
+          <h4>Frågor och svar</h4>
 
           <ul>
             <li><span class="glyphicon glyphicon-triangle-right"></span>Var hittar jag mitt årsbesked?</li>
@@ -15,7 +14,7 @@
             <li><span class="glyphicon glyphicon-triangle-right"></span>Vad är minimibelopp?</li>
           </ul>
 
-          <p style="margin-top: 4.8rem;" class="fm-footer-heading">Öppettider</p>
+          <h4>Öppettider</h4>
 
           <ul>
             <li>Måndag-Fredag: <span style="margin-left: 10rem;" class="text-semibold">09.00-12.00 & 13.00-17.00</span></li>
@@ -24,16 +23,16 @@
         </div>
 
         <form class="fm-contact-form col-xs-12 col-md-6" action="" method="">
-          <p class="fm-footer-heading">Kontakta kundservice</p>
+          <h4>Kontakta kundservice</h4>
 
           <div class="form-input-group">
-            <input type="text" class="form-control" name="name" placeholder="Namn">
+            <input type="text" name="name" placeholder="Namn">
           </div>
           <div class="form-input-group">
-            <input type="email" class="form-control" name="email" placeholder="E-post">
+            <input type="email" name="email" placeholder="E-post">
           </div>
           <div class="form-group">
-            <textarea class="form-control" rows="5" name="message" placeholder="Hur kan vi hjälpa till?"></textarea>
+            <textarea rows="5" name="message" placeholder="Hur kan vi hjälpa till?"></textarea>
           </div>
           <button type="submit" class="fm-button button-light">Skicka</button>
         </form>
