--- a/src/Sandbox/client/src/scss/base_imports/_typography.scss
+++ b/src/Sandbox/client/src/scss/base_imports/_typography.scss
@@ -4,71 +4,36 @@
  * 
  */
 
-h1, h2, h3, h4, h5, h6, p {
-  //margin: 0;
-  padding-top: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-bottom: $font-size-base/2;
+h1, h2, h3, h4, h5, h6, p, small {
+  margin: 0.5em 0;
+  padding: 0;
   line-height: inherit;
-
-  @media(min-width: $screen-sm) {
-    padding-bottom: $font-size-base;
-  }
 } 
 
 h1 {
-  font-size: $font-size-h1 / $ratio-golden;
+  font-size: $font-size-h1;
   line-height: normal;
   color: $color-dark-grey;
-
-  @media(min-width: $screen-sm) {
-    font-size: $font-size-h1;
-  }
 }
 
 h2 {
-  font-size: $font-size-h2 / $ratio-golden;
+  font-size: $font-size-h2;
   line-height: normal;
   color: $color-dark-grey;
   text-transform: uppercase;
   font-weight: $font-weight-semibold;
-
-  @media(min-width: $screen-sm) {
-    font-size: $font-size-h2;
-  }
 }
 
 h3 {
-  font-size: $font-size-h3 / $ratio-golden;
+  font-size: $font-size-h3;
   color: $color-dark-grey;
-
-  @media(min-width: $screen-sm) {
-    font-size: $font-size-h3;
-  }
 }
 
 h4 {
-  font-size: $font-size-h4 / $ratio-golden;
+  font-size: $font-size-h4;
   color: $color-dark-grey;
   text-transform: uppercase;
   font-weight: $font-weight-semibold;
-
-  &:after {
-    content: " ";
-    border: solid 0.2rem $color-accent;
-    display: block;
-    width: $layout-modifier-lg;
-    margin: $layout-modifier-sm/2 auto;
-
-    @media(min-width: $screen-sm) {
-      margin: $layout-modifier-sm auto;
-    }
-  }
-
-  @media(min-width: $screen-sm) {
-    font-size: $font-size-h4;
-  }
 }
 
 h5 {
@@ -81,9 +46,9 @@ h6 {
 }
 
 p {
-  font-size: 1.4rem;
+  font-size: $font-size-base;
+}
 
-    @media(min-width: $screen-sm) {
-    font-size: $font-size-base;
-  }
+small {
+  font-size: $font-size-small;
 }
