--- a/src/Sandbox/client/src/scss/base_imports/variable_imports/_font-variables.scss
+++ b/src/Sandbox/client/src/scss/base_imports/variable_imports/_font-variables.scss
@@ -14,24 +14,20 @@ $font-weight-semibold: 600;
 $font-weight-bold: 800;
 
 // Sizes
-$font-size-h1: 7.6rem;
-$font-size-h2: 4.7rem;
-$font-size-h3: 2.9rem;
-$font-size-h4: 2.3rem;
-$font-size-h5: 1.8rem;
-$font-size-h6: 1.2rem;
-$font-size-base: 1.8rem;
-
-/*$font-size-h1: 4.8rem;
-$font-size-h2: 3.6rem;
-$font-size-h3: 2.8rem;
-$font-size-h4: 1.8rem;
-$font-size-h5: 1.6rem;
-$font-size-h6: 1.4rem;
-$font-size-base: 1.6rem;*/
+$font-size-h1: 11.2rem;
+$font-size-h2: 5.6rem;
+$font-size-h3: 4.5rem;
+$font-size-h4: 3.4rem;
+$font-size-h5: 2.4rem;
+$font-size-h6: 2rem;
+$font-size-base: 1.6rem;
+$font-size-caption: 1.4rem;
+$font-size-small: 1.2rem;
 
 // Line Height (keep unitless)
 $font-line-height: 1.667;
+
+//$font-line-height: 1.5;
 
 // Letter Spacing
 $font-letter-spacing: 0.3rem;
