--- a/src/Sandbox/wwwroot/views/fm-news-view.html
+++ b/src/Sandbox/wwwroot/views/fm-news-view.html
@@ -1,13 +1,27 @@
-<section class="section-padding background-dark">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <ul>
-          <li ng-repeat="newsItem in fmNews.newsItems"><a ui-sref="Nyheter/{{newsItem.NewsItemId}}">{{newsItem.Title}}</a></li>
-        </ul>
+<section class="background-light">
+
+  <div ng-repeat="newsItem in fmNews.newsItems">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 section-padding" style="position: relative;">
+          <div class="col-xs-2">
+            <div style="margin: 2rem 20rem 0 0; width: 10rem; height: 10rem; background-color: #2BBBAE; border-radius: 100%;"></div>
+          </div>
+          <div class="col-xs-10">
+            <h3><a ui-sref="news/{{newsItem.NewsItemId}}">{{newsItem.Title}}</a></h3>
+            <p style="font-size: 1.8rem; font-style: italic;" ng-bind-html="newsItem.TextExcerpt"></p>
+            <p style="font-size: 1.6rem; font-weight: 100;" ng-bind-html="newsItem.SignatureExcerpt"></p>
+          </div>
+          <div style="width: 4.8rem; height: 4.8rem; position: absolute; margin: auto; left: 0; right: 0; bottom: -2.4rem; transform: rotate(45deg); background-color: #fff;"></div>
+        </div>
       </div>
     </div>
+
+    <figure style="height: 20rem; background-color: #2BBBAE"></figure>
+
   </div>
+
 </section>
 
 
