--- a/src/Sandbox/wwwroot/views/fm-register-view.html
+++ b/src/Sandbox/wwwroot/views/fm-register-view.html
@@ -1,9 +1,9 @@
-<section class="section-padding fm-register">
+<section class="section-padding fm-register background-dark">
   
   <div class="container">
     <div class="row">
       <h2 class="text-center">Skapa Konto</h2>
-      <form ng-submit="fmRegister.submit()" name="register" class="col-sm-4 col-sm-offset-4">
+      <form ng-submit="fmRegister.submit()" name="register" class="col-xs-12 col-sm-8 col-sm-offset-2">
         <input type="text" ng-model="fmRegister.name" name="name" placeholder="Användarnamn">
         <input type="password" ng-model="fmRegister.password" name="password" placeholder="Lösenord">
         <input type="submit" class="fm-button button-accent" value="Skapa Konto" />
@@ -11,5 +11,4 @@
     </div>
   </div>
 
-  
 </section>
