--- a/src/Sandbox/client/src/scss/base_imports/_tables.scss
+++ b/src/Sandbox/client/src/scss/base_imports/_tables.scss
@@ -13,7 +13,7 @@ $table-padding: 1rem;
   margin-bottom: $layout-modifier-sm;
   font-size: 1.4rem;
 
-  tr { 
+  tr {
 
     th, td {
       padding: $table-padding;
@@ -36,6 +36,28 @@ $table-padding: 1rem;
       &:nth-child(odd) {
         background-color: $color-white;
       }
+
+      /*&.ng-enter-stagger {
+        transition-delay: $animation-transition-short/4;
+        transition-duration: 0;
+      }
+
+      &.ng-move, &.ng-enter, &.ng-leave {
+        transition: opacity $animation-transition-short linear;
+        //transition: all 175ms linear;
+      }
+
+      &.ng-leave.ng-leave-active, &.ng-move, &.ng-enter {
+        opacity: 0;
+        //transform: translate3d(5rem, 0, 0); 
+        //transform: scale3d(0.5, 0.5, 0.5);
+      }
+
+      &.ng-leave, &.ng-move.ng-move-active, &.ng-enter.ng-enter-active {
+        opacity: 1;
+        //transform: translate3d(-1rem, 0, 0); 
+        //transform: scale3d(1, 1, 1);
+      }*/
     }
   }
 
