--- a/src/Sandbox/client/src/components/controllers/fm-news-controller/fm-news-view.html
+++ b/src/Sandbox/client/src/components/controllers/fm-news-controller/fm-news-view.html
@@ -1,27 +1,77 @@
-﻿<section class="background-light">
+﻿<section class="section-padding background-accent">
+  <div class="container">
+    <div class="row">
+      <header class="col-xs-12 col-sm-10 col-sm-offset-1">
+        <h3 style="color: white;">Nyheter och Analyser</h3>
+      </header>
+    </div>
+  </div>
+</section>
 
-  <div ng-repeat="newsItem in fmNews.newsItems">
+<section class="section-padding background-light">
+  <div class="container">
 
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-10 col-sm-offset-1 section-padding" style="position: relative;">
-          <div class="col-xs-2">
-            <div style="margin: 2rem 20rem 0 0; width: 10rem; height: 10rem; background-color: #2BBBAE; border-radius: 100%;"></div>
-          </div>
-          <div class="col-xs-10">
-            <h3><a ui-sref="news/{{newsItem.NewsItemId}}">{{newsItem.Title}}</a></h3>
-            <p style="font-size: 1.8rem; font-style: italic;" ng-bind-html="newsItem.TextExcerpt"></p>
-            <p style="font-size: 1.6rem; font-weight: 100;" ng-bind-html="newsItem.SignatureExcerpt"></p>
-          </div>
-          <div style="width: 4.8rem; height: 4.8rem; position: absolute; margin: auto; left: 0; right: 0; bottom: -2.4rem; transform: rotate(45deg); background-color: #fff;"></div>
-        </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 margin-bottom-lg">
+        <h6>Nyheter och Analyser</h6>
+        <hr />
+        <p>
+          Hos oss på Fondmarknaden.se kan du läsa de senaste nyheterna från fondvärlden, nyheter direkt från fondbolagen samt analyser och artiklar från våra rådgivare.
+          <br />
+          <br />
+          Läs om utvecklingen på den globala marknaden och ta del av analyser och prognoser. Fondmarknaden.se.s experter delar med sig av sitt kunnande. Håll dig uppdaterad med Fondmarknaden.se:s och fondbolagens analyser om fonder och marknaden.
+        </p>
       </div>
     </div>
 
-    <figure style="height: 20rem; background-color: #2BBBAE"></figure>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-sm-offset-1 margin-bottom-lg">
+        <h6>Senaste Nyhetsinlägg</h6>
+        <hr />
+        <ul>
+          <li class="margin-bottom-lg animated fadeIn" ng-repeat="newsItem in fmNews.newsItems">
+            <h6 style="margin-bottom: 0 !important;">
+              <a ui-sref="article({id: newsItem.NewsItemId})">{{newsItem.Title}}</a>
+            </h6>
+            <p style="margin-top: 0 !important;" class="text-caption" ng-bind-html="newsItem.TextExcerpt"></p>
+            <a ui-sref="article({id: newsItem.NewsItemId})" style="text-transform: capitalize;" href="#">Läs mer</a>
+          </li>
+        </ul>
+        <hr />
+
+        <div class="sk-wave" ng-show="fmNews.fetching">
+          <div class="sk-rect sk-rect1"></div>
+          <div class="sk-rect sk-rect2"></div>
+          <div class="sk-rect sk-rect3"></div>
+          <div class="sk-rect sk-rect4"></div>
+          <div class="sk-rect sk-rect5"></div>
+        </div>
+
+        <a href="" ng-click="fmNews.readMore()">Visa Fler Nyheter <span class="glyphicon glyphicon-chevron-right"></span></a>
+      </div>
+
+      <aside class="col-xs-12 col-sm-3 col-sm-offset-1 hidden-xs">
+        <h6>Nyhetsarkiv</h6>
+        <hr />
+        <ul>
+          <li>Relaterade Nyheter</li>
+          <li>Relaterade Nyheter</li>
+          <li>Relaterade Nyheter</li>
+          <li>Relaterade Nyheter</li>
+          <li>Relaterade Nyheter</li>
+        </ul>
+      </aside>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 margin-bottom-lg">
+        <h6>Relaterade Artiklar</h6>
+        <hr />
+        <fm-newsfeed news="fmNews.latestNews"></fm-newsfeed>
+      </div>
+    </div>
 
   </div>
-
 </section>
 
 
