--- a/src/Sandbox/client/src/scss/base_imports/_typography.scss
+++ b/src/Sandbox/client/src/scss/base_imports/_typography.scss
@@ -20,7 +20,6 @@ h2 {
   font-size: $font-size-h2;
   line-height: normal;
   color: $color-dark-grey;
-  text-transform: uppercase;
   font-weight: $font-weight-semibold;
 }
 
@@ -32,8 +31,6 @@ h3 {
 h4 {
   font-size: $font-size-h4;
   color: $color-dark-grey;
-  text-transform: uppercase;
-  font-weight: $font-weight-semibold;
 }
 
 h5 {
@@ -43,6 +40,7 @@ h5 {
 
 h6 {
   font-size: $font-size-h6;
+  color: $color-dark-grey;
 }
 
 p {
