--- a/src/Sandbox/client/src/scss/style.scss
+++ b/src/Sandbox/client/src/scss/style.scss
@@ -13,7 +13,8 @@
 @import 'bootstrap';
 @import 'bourbon';
 @import 'animate';
-@import '../../../bower_components/owl-carousel2/dist/assets/owl.carousel.css';
+@import 'spinkit';
+@import '../../../bower_components/owl-carousel2/dist/assets/owl.carousel';
 
 // Base styles.
 @import './base_imports/_variables.scss';
@@ -27,17 +28,19 @@
 
 // Component styles.
 /* inject:scss */
-@import "../components/controllers/fm-register-controller/fm-register-style.scss";
 @import "../components/controllers/fm-portfolio-generator-controller/fm-portfolio-generator-style.scss";
-@import "../components/directives/fm-bulletin-slider-directive/fm-bulletin-slider-style.scss";
+@import "../components/controllers/fm-news-controller/fm-news-style.scss";
+@import "../components/controllers/fm-register-controller/fm-register-style.scss";
 @import "../components/directives/fm-disclaimer/fm-disclaimer-style.scss";
-@import "../components/directives/fm-fund-gallery-directive/fm-fund-gallery-style.scss";
+@import "../components/directives/fm-bulletin-slider-directive/fm-bulletin-slider-style.scss";
 @import "../components/directives/fm-footer-directive/fm-footer-style.scss";
 @import "../components/directives/fm-hero-directive/fm-hero-style.scss";
+@import "../components/directives/fm-fund-gallery-directive/fm-fund-gallery-style.scss";
+@import "../components/controllers/fm-single-fund-controller/fm-single-fund-style.scss";
 @import "../components/directives/fm-market-map-directive/fm-market-map-style.scss";
+@import "../components/directives/fm-navbar-directive/fm-navbar-style.scss";
 @import "../components/directives/fm-market-overview-directive/fm-market-overview-style.scss";
 @import "../components/directives/fm-newsfeed-directive/fm-newsfeed-style.scss";
-@import "../components/directives/fm-navbar-directive/fm-navbar-style.scss";
 @import "../components/directives/fm-step-progressbar/fm-step-progressbar-style.scss";
 @import "../components/controllers/fm-portfolio-generator-controller/subviews/configure/fm-portfolio-generator-configure-style.scss";
 @import "../components/controllers/fm-portfolio-generator-controller/subviews/confirm/fm-portfolio-generator-confirm-style.scss";
